appId: com.stripe.android.financialconnections.example
---
- launchApp
- startRecording: /tmp/test_results/testmode-data-testoauthinstitution
# Android specific: Navigate to example
- tapOn: "Playground"
- tapOn:
    id: "Native_checkbox"
- tapOn: "Mode_Dropdown_Icon"
- tapOn:
    id: "Test_checkbox"
- tapOn:
    id: "Data_checkbox"
- tapOn: "Connect Accounts!"
- extendedWaitUntil:
      notVisible:
          id: "Data_checkbox"
      timeout: 30000
# Common: web AuthFlow - connect OAuth institution
- tapOn: "Agree and continue"
- assertVisible: "Test OAuth Institution"
# ERRORS
- tapOn: ".*unscheduled.*"
- tapOn: "Select another bank"
# SELECT OAUTH INSTITUTION
- tapOn: "Test OAuth Institution"
- tapOn: "Continue"
####### Bypass Chrome on-boarding screen #######
- runFlow:
    file: ../../common/subflow-skip-chrome-welcome.yaml
###############################################
# SELECT ALL ACCOUNTS
- extendedWaitUntil:
    visible: "Select all accounts"
    timeout: 60000
- tapOn: "Select all accounts" # select all accounts
- tapOn:
    text: "Link accounts"
    retryTapIfNoChange: false
# CONFIRM AND COMPLETE
- assertVisible: ".*Success.*"
- tapOn: "Done"
- assertVisible: ".*Completed!.*"
- assertVisible: ".*StripeBank.*"
- stopRecording
