appId: com.stripe.android.financialconnections.example
---
- launchApp
- startRecording: /tmp/test_results/testmode-paymentintent-testinstitution-networking
# Android specific: Navigate to example
- tapOn: "Playground"
###########################################
# CREATE NEW LINK ACCOUNT
###########################################
- tapOn:
    id: "Native_checkbox"
- tapOn: "Mode_Dropdown_Icon"
- tapOn:
    id: "NetworkingTestMode_checkbox"
- tapOn:
    id: "PaymentIntent_checkbox"
- tapOn:
    id: "email_input"
- inputRandomEmail
- hideKeyboard
- tapOn: "Connect Accounts!"
# Common: web AuthFlow - connect OAuth institution
- extendedWaitUntil:
    visible:
      id: "consent_cta"
    timeout: 30000
- tapOn:
    id: "consent_cta"
# SELECT LEGACY INSTITUTION
- tapOn: "Test Institution"
####### Bypass Chrome on-boarding screen #######
- runFlow:
    file: ../../common/subflow-skip-chrome-welcome.yaml
    env:
      APP_ID: com.stripe.android.financialconnections.example
###############################################
# SELECT SUCCESS ACCOUNT
- extendedWaitUntil:
    visible: "Success"
    timeout: 60000
- tapOn: "Success"
- tapOn: "Link Account"
# ENTER PHONE FOR NEW NETWORKED USER
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      text: ".*555.*" # wait for placeholder to be visible
- inputText: "6223115555"
- tapOn: "Save to Link"
# CONFIRM AND COMPLETE
- assertVisible: "Success!"
- assertVisible: ".*through Link.*"
- tapOn: "Done"
- assertVisible: ".*Intent Confirmed!.*"
###########################################
# REUSE NEWLY CREATED LINK ACCOUNT
###########################################
- tapOn: "Connect Accounts!"
# Common: web AuthFlow - connect OAuth institution
- extendedWaitUntil:
    visible:
      id: "consent_cta"
    timeout: 30000
- tapOn:
    id: "consent_cta"
# LOGIN TO NETWORKING
- tapOn:
    id: "existing_email-button"
  # 2FA
- assertVisible: "●"
- inputText: "111111"
# SELECT NETWORKED ACCOUNT
- tapOn: "Success"
- tapOn: "Connect account"
# STEP UP AUTHENTICATION
- assertVisible: "●"
- inputText: "111111"
- assertVisible: "Success!"
- tapOn: "Done"
- assertVisible: ".*Intent Confirmed!.*"
- stopRecording
