appId: com.stripe.android.financialconnections.example
---
- launchApp
- startRecording: /tmp/test_results/testmode-paymentintent-testinstitution
# Android specific: Navigate to example
- tapOn: "Playground"
- tapOn:
    id: "Native_checkbox"
- tapOn: "Mode_Dropdown_Icon"
- tapOn:
    id: "Test_checkbox"
- tapOn:
    id: "PaymentIntent_checkbox"
- tapOn: "Connect Accounts!"
# Common: web AuthFlow - connect OAuth institution
- extendedWaitUntil:
    visible:
      id: "consent_cta"
    timeout: 30000
- tapOn:
    id: "consent_cta"
# SELECT LEGACY INSTITUTION
- tapOn: "Test Institution"
####### Bypass Chrome on-boarding screen #######
- runFlow:
    file: ../../common/subflow-skip-chrome-welcome.yaml
###############################################
# SELECT SUCCESS ACCOUNT
- extendedWaitUntil:
    visible: "Success"
    timeout: 60000
- tapOn: "Success" # select all accounts
- tapOn:
    text: "Link account"
    retryTapIfNoChange: false
# CONFIRM AND COMPLETE
- tapOn: "Done"
- assertVisible: ".*Intent Confirmed!.*"
- stopRecording
