appId: com.stripe.android.financialconnections.example
---
- launchApp
# Android specific: Navigate to example (1)
- tapOn: "Playground"

# Android specific: Navigate to example (2)
- takeScreenshot: TestOAuth_ExampleAppLauncher
- tapOn:
    id: "Native_checkbox"
- tapOn:
    id: "Test_checkbox"
- tapOn:
    id: "Data_checkbox"
- tapOn: "Connect Accounts!"

# Common: web AuthFlow - connect OAuth institution
- extendedWaitUntil:
    visible: "Agree"
    timeout: 30000
- takeScreenshot: TestOAuth_Consent
- tapOn: "Agree"
- assertVisible: "Test OAuth Institution"
- takeScreenshot: TestOAuth_BankPicker
# OAUTH - SELECT ALL ACCOUNTS
- tapOn: "Test OAuth Institution"
- assertVisible: "Continue"
- takeScreenshot: TestOAuth_Prepane
- tapOn: "Continue"
####### Bypass Chrome on-boarding screen #######
- runFlow:
    file: ../../common/subflow-skip-chrome-welcome.yaml
    env:
        APP_ID: com.stripe.android.financialconnections.example
###############################################
- assertVisible: "Select all accounts"
- takeScreenshot: TestOAuth_AccountPicker
- tapOn: "Select all accounts" # select all accounts
- takeScreenshot: TestOAuth_AccountPicker_AllAccounts
- tapOn: "Link accounts"
# START LINK MORE ACCOUNTS FLOW
- assertVisible: "Link another account"
- takeScreenshot: TestOAuth_Success
- tapOn: "Link another account"
# LEGACY - SELECT ALL ACCOUNTS
- assertVisible: "Test Institution"
- tapOn: "Test Institution"
- assertVisible: "Select all accounts"
- takeScreenshot: TestLegacy_AccountPicker
- tapOn: "Select all accounts" # select all accounts
- takeScreenshot: TestLegacy_AccountPicker_AllAccounts
- tapOn: "Link accounts"
- assertVisible: "Done"
- assertVisible: "Link another account"
- tapOn: "Done"
- assertVisible: ".*Completed!.*"
