appId: com.stripe.android.financialconnections.example
---
- launchApp
# Android specific: Navigate to example (1)
- tapOn: "Playground"
# Android specific: Navigate to example (2)
- tapOn:
    id: "Native_checkbox"
- tapOn:
    id: "Test_checkbox"
- tapOn:
    id: "Data_checkbox"
- tapOn: "Connect Accounts!"
# Common: web AuthFlow - connect OAuth institution
- extendedWaitUntil:
    visible: "Agree"
    timeout: 30000
- tapOn: "Agree"
- assertVisible: "Test OAuth Institution"
# SELECT LEGACY INSTITUTION
- tapOn: "Test Institution"
####### Bypass Chrome on-boarding screen #######
- runFlow:
    file: ../common/subflow-skip-chrome-welcome.yaml
    env:
      APP_ID: com.stripe.android.financialconnections.example
###############################################
# SELECT ALL ACCOUNTS
- assertVisible: "Select all accounts"
- tapOn: "Select all accounts" # select all accounts
- tapOn: "Link accounts"
# CONFIRM AND COMPLETE
- assertVisible: "Link another account"
- tapOn: "Done"
- assertVisible: ".*Completed!.*"
- assertVisible: ".*StripeBank.*"