appId: com.stripe.android.financialconnections.example
---
- launchApp
- startRecording: /tmp/test_results/web-testmode-data-testoauthinstitution
# Android specific: Navigate to example
- tapOn: "Playground"
- tapOn:
    id: "Web_checkbox"
- tapOn: "Mode_Dropdown_Icon"
- tapOn:
    id: "Test_checkbox"
- tapOn:
    id: "Data_checkbox"
- tapOn: "Connect Accounts!"
- extendedWaitUntil:
    notVisible:
      id: "Data_checkbox"
    timeout: 30000
######## Bypass Chrome on-boarding screen #######
- runFlow:
    file: ../../common/subflow-skip-chrome-welcome.yaml
################################################
# Common: web AuthFlow - connect OAuth institution
- tapOn: "Agree and continue"
# SELECT OAUTH INSTITUTION
- assertVisible: "Test OAuth Institution"
- tapOn: "Test OAuth Institution"
- tapOn: "Continue Continue"
# SELECT ALL ACCOUNTS
- extendedWaitUntil:
    visible: "Connect accounts"
    timeout: 60000
- tapOn: "Connect accounts" # select all accounts
- tapOn:
    text: "Link accounts"
    retryTapIfNoChange: false
# CONFIRM AND COMPLETE
- assertVisible: "Test OAuth Institution"
- tapOn: "Done"
- assertVisible: ".*Completed!.*"
- assertVisible: ".*StripeBank.*"
- stopRecording
